@@ -1,3 +1,8 @@
+* 2013-07-24 - martin.herfurth@open-xchange.com
+
+ - Fix for bug 27591: Handle Exchange all-day flag: X-MICROSOFT-CDO-ALLDAYEVENT
+ - Fix for bug 27584: Handle Exchange all-day flag: X-MICROSOFT-CDO-ALLDAYEVENT
+
 * 2013-07-23 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 27476: Implicitly add internal user in change exceptions if missing from imported iCal 
